--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.betaline">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
 
     <application
       android:name=".MainApplication"
@@ -10,6 +12,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+       <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCTz-NfFknY2c9kuPMBsdzQYJCGNBn0XVw"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
