--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.1",
+    "appcenter": "2.5.0",
+    "appcenter-analytics": "2.5.0",
+    "appcenter-crashes": "2.5.0",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "native-base": "^2.12.2",
@@ -20,9 +23,13 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-easy-grid": "^0.2.1",
     "react-native-easy-toast": "^1.2.0",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-maps": "0.26.1",
     "react-native-picker": "^4.3.7",
     "react-native-qrcode-scanner": "^1.2.1",
+    "react-native-qrcode-svg": "^5.2.0",
+    "react-native-svg": "^9.13.3",
     "react-native-textinput-with-icons": "^1.0.18",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
