--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,8 @@
+/**
+ * Run Proguard to shrink the Java bytecode in release builds.
+ */
+def enableProguardInReleaseBuilds = true
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
